--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 Gemfile.lock
+
+.idea/.name
+
+.idea/.rakeTasks
+
+*.iml
+
+.idea/dictionaries/williamjpowell.xml
+
+.idea/encodings.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
+
+.idea/scopes/scope_settings.xml
+
+.idea/vcs.xml
+
+.idea/workspace.xml
