--- a/cucumber.yml
+++ b/cucumber.yml
@@ -3,11 +3,11 @@
 std_opts = "--no-source --color --format pretty"
 %>
 
-default: BROWSER=firefox DRIVER=WATIR <%= std_opts %>
-sfirefox: BROWSER=firefox DRIVER=SELENIUM <%= std_opts %>
-wchrome: BROWSER=chrome DRIVER=WATIR <%= std_opts %>
-schrome: BROWSER=chrome DRIVER=SELENIUM <%= std_opts %>
-wie: BROWSER=ie DRIVER=WATIR <%= std_opts %>
-sie: BROWSER=ie DRIVER=SELENIUM <%= std_opts %>
-focus: BROWSER=firefox DRIVER=WATIR <%= std_opts %> --tags @focus
+default: BROWSER=firefox DRIVER=WATIR <%= std_opts %> --tags ~@selenium_only
+sfirefox: BROWSER=firefox DRIVER=SELENIUM <%= std_opts %> --tags ~@watir_only
+wchrome: BROWSER=chrome DRIVER=WATIR <%= std_opts %> --tags ~@selenium_only
+schrome: BROWSER=chrome DRIVER=SELENIUM <%= std_opts %> --tags ~@watir_only
+wie: BROWSER=ie DRIVER=WATIR <%= std_opts %> --tags ~@selenium_only
+sie: BROWSER=ie DRIVER=SELENIUM <%= std_opts %> --tags ~@watir_only
+focus: BROWSER=firefox DRIVER=WATIR <%= std_opts %> --tags @focus ~@selenium_only
 
