--- a/cucumber.yml
+++ b/cucumber.yml
@@ -1,5 +1,5 @@
 <%
-std_opts = "--no-source --color --format Cucumber::Formatter::Fuubar"
+std_opts = "--no-source --color --format Cucumber::Formatter::Fuubar --tags ~@ignore"
 %>
 
 default: BROWSER=firefox DRIVER=WATIR <%= std_opts %> --tags ~@selenium_only
